implement configurable field options system and apply on resource types
